<resources>
    <string name="app_name" translatable="false">Runora</string>
    <string name="small_screen_size">Small Screen Size Layout</string>
    <string name="normal_screen_size">Normal Screen Size Layout</string>
    <string name="large_screen_size">Large Screen Size Layout</string>
    <string name="main_layout">Main Layout</string>
    <string name="LOG_IN">Log In</string>
    <string name="sourcecodepromedium">sourcecodepro_medium</string>
    <string name="counts_word">COUNTS</string>
    <string name="Settings">settings</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="music">Music</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="runora" translatable="false">Runora</string>
    <string name="ca_runora" translatable="false">Runora</string>
    <string name="start_running">Start Run</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="_0_00" translatable="false">0.00</string>
    <string name="avg_spd" translatable="false">Avg Spd</string>
    <string name="distance_0_00" translatable="false">0.000</string>
    <string name="curr_0_00" translatable="false">0.00</string>
    <string name="curr_spd" translatable="false">Curr Spd</string>
    <string name="Reg">Registering.</string>
    <string name="settings_title">Settings</string>
    <string name="Distance">Distance</string>
    <string name="meters">Miles</string>
    <string name="spd_in_mph" translatable="false">Spd in mph</string>
    <string name="spd_in_km_h" translatable="false">Spd in km/h</string>

    <string-array name="feedback_time">
        <item> No feedback </item>
        <item> 5 min </item>
        <item> 10 min </item>
        <item> 15 min </item>
        <item> 20 min </item>
        <item> 25 min </item>
        <item> 30 min </item>
    </string-array>
    <string name="title_activity_countdowntimer" translatable="false">Countdowntimer</string>
    <string name="kilometers">Kilometers</string>
    <string name="km" translatable="false">Km</string>
    <string name="miles">Miles</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="gobackbutton">gobackbutton</string>
    <string name="your_history_is_empty">Your History Is Empty</string>
    <string name="countdown">Countdown</string>
    <string name="activity_theme">Activity Theme</string>
    <string name="activity_alarm">Voice Countdown</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="history_table_date">WhatIsDay, Monthary, ##th, Year</string>
    <string name="delete">Delete</string>
    <string name="entry">Entry</string>
    <string name="_0">0</string>
    <string name="_0_00_km">0.00 km</string>
    <string name="marble_blue">Marble Blue</string>
    <string name="settings_home_pg">Settings</string>

    <string-array name="theme_array">
        <item> Marble Blue  </item>
        <item> Purple Grape </item>
    </string-array>

    <string-array name="Language_Options">
        <item> English </item>
        <item> German </item>
    </string-array>
</resources>
