<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RecyclerView">


    <ImageView
        android:id="@+id/mainbackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/HistoryTab"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="-203dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/road_run"
        tools:ignore="contentDescription" />

    <ImageView
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_banner"
        android:layout_below="@id/HistoryTab"
        android:background="@drawable/run_interface_background" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HistoryTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/History"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bottom_banner"
            android:fontFamily="@font/raleway_medium"
            android:paddingTop="20dp"
            android:text="@string/history"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginEnd="210dp"
            android:background="@drawable/returnbuttonresource"
            android:drawableTop="@drawable/ic_left_arrow"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/History"
            app:layout_constraintStart_toStartOf="@+id/History"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/bottom_banner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bottom_banner"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/profile_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/invisible_button"
                android:drawableTop="@drawable/ic_notepad2"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/about"
                android:textColor="#ffff"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/History_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/history_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/invisible_button"
                android:drawableTop="@drawable/ic_preference2"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:textSize="18sp"
                android:text="@string/settings"
                android:textColor="#ffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/music_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/invisible_button"
                android:drawableTop="@drawable/ic_headphones2"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:textSize="18sp"
                android:text="@string/music"
                android:textColor="#ffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/music_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/EmptyActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/raleway_medium"
        android:gravity="center"
        android:visibility="visible"
        android:text="@string/your_history_is_empty"
        android:textColor="#ffff"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/Recycle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_banner"
        android:layout_below="@id/HistoryTab"
        app:layoutManager="LinearLayoutManager"/>




</RelativeLayout>