<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobile.home">

    <ImageView
    android:id="@+id/mainbackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="-203dp"
    android:scaleType="centerCrop"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/road_run"
    tools:ignore="contentDescription" />

    <ImageView
        android:id="@+id/backgroundtint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gradient_background"
        tools:ignore="contentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absolutey="346dp">

            <Button
                android:id="@+id/profile_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_buttons"
                android:drawableTop="@drawable/ic_man_user"
                android:paddingTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_btntext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/profile_btn"
                android:fontFamily="@font/next_art_semibold"
                android:text="@string/profile"
                android:textColor="#EBEBEB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/settings_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_buttons"
                android:drawableTop="@drawable/ic_notepad"
                android:paddingTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/settings_btntext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/settings_btn"
                android:fontFamily="@font/next_art_semibold"
                android:text="@string/settings"
                android:textColor="#EBEBEB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/goals"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="160dp"-->
<!--            android:layout_marginBottom="160dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <Button-->
<!--                android:id="@+id/goals_btn"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:background="@drawable/circle_buttons"-->
<!--                android:drawableTop="@drawable/ic_trophy"-->
<!--                android:paddingTop="5dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.0"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <TextView-->
<!--                android:id="@+id/goals_btntext"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/goals_btn"-->
<!--                android:fontFamily="@font/next_art_semibold"-->
<!--                android:text="@string/goals"-->
<!--                android:textColor="#EBEBEB"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/goals_btn" />-->


<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/history_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_buttons"
                android:drawableTop="@drawable/ic_running"
                android:paddingTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/history_btntext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/history_btn"
                android:fontFamily="@font/next_art_semibold"
                android:text="@string/history"
                android:textColor="#EBEBEB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="160dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/music_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_buttons"
                android:drawableTop="@drawable/ic_headphones"
                android:paddingTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/music_btntext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/music_btn"
                android:fontFamily="@font/next_art_semibold"
                android:text="@string/music"
                android:textColor="#EBEBEB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/music_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/start_btn"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/start_running"
            android:fontFamily="@font/days_one"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/start_running"
            android:textColor="#F1F1F1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>